# PaCHash

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  README.md
.github/workflows/: build.yml
benchmark/: Barrier.h  RandomObjectProvider.h  baseline.cpp  benchmark.cpp  distribution.cpp  distribution.h  main.cpp  merge.cpp  queryInternal.cpp
cmake/: FindLibAIO.cmake  FindLibUring.cmake
example/: README.md  example.cpp  ipsx.h  query.cpp  twitter.cpp  unequalObjects.cpp  uniprot.cpp  wikipedia.cpp
include/: BlockIterator.h  BlockObjectWriter.h  BucketObjectWriter.h  BumpingHashObjectStore.h  ConstructionTimer.h  EliasFano.h  EliasFanoIndexing.h  EliasFanoObjectStore.h  FixedBlockObjectStore.h  GccDiagnostics.h  Hash.h  IoManager.h  LinearObjectReader.h  LinearObjectWriter.h  Log.h  Merge.h  ObjectStoreView.h  PaCHashIndex.h  PaCHashObjectStore.h  PactHashObjectStore.h  PageConfig.h  PagedFileOutputStream.h  PagedObjectReconstructor.h  ParallelCuckooHashing.h  ParallelCuckooObjectStore.h  QueryHandle.h  QueryTimer.h  SeparatorHashing.h  SeparatorObjectStore.h  StoreConfig.h  Util.h  VariableSizeObjectStore.h  VariableSizeObjectStoreTest.h  fastrange.h
include/pachash/: BlockCompressedBitVector.hpp
